# create-cip-app

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
src/: index.js
template/: .prettierrc  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml
template/apps/%BACKEND_NAME%/: .env.example  Cargo.toml  docker-compose.development.yml  project.json
template/apps/%BACKEND_NAME%/src/: main.rs
template/apps/%FRONTEND_NAME%/: .eslintrc.cjs  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
template/apps/%FRONTEND_NAME%-e2e/: project.json
template/apps/%FRONTEND_NAME%/src/routes/: +layout.svelte
