[package]
name = "%BACKEND_NAME%"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.3.0"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid", "migrate"] }
dotenvy = "0.15.6"
futures = "0.3.25"
serde = "1.0.152"
serde_json = "1.0.91"
